# foundry_advanced_turtorial

./: .gitignore  .gitmodules  README.md  ReadMe.md
01_Erc20/: Makefile  README.md
01_Erc20/contracts/: .env.example  makefile
01_Erc20/frontend/: LuLuCoin.json  README.md  global.d.ts  package-lock.json  package.json  tailwind.config.mjs
01_Erc20/scripts/: sync-contract.js
01_erc-20/: README.md  makefile
01_erc-20/contracts/: makefile
02_Faucet/: .gitignore  Makefile  README.md
02_Faucet/contracts/: .env.example  makefile
02_Faucet/frontend/: LLCFaucet.json  LuLuCoin.json  README.md  package-lock.json  package.json  tsconfig.json
02_Faucet/scripts/: sync-contract.js
02_faucet/: Makefile  README.md
02_faucet/frontend/: tailwind.config.mjs
03_MerkleAirDrop/: Makefile  ReadMe.md
03_merkleAirDrop/: Makefile  ReadMe.md
04_FlappyBird-Onchain/: .gitignore  Makefile  README.md
04_flappy-bird-onchain/: Makefile  README.md
05_SnakeGame-On-chain/: .gitignore  Makefile  README.md
06_2048Game-On-chain/: .gitignore  Makefile  README.md
07_LightOut-Game-On-chain/: .env.example  .gitignore  Makefile  README.md
08_LuLuNFT-Minter/: .env.example  .gitignore  Makefile  README.md
09_BookManagement-On-chain/: Makefile  README.md
10_AnvilExplorer/: .env.example  .gitignore  Makefile  README.md
11_Polymarket-On-chain/: .env.example  .gitignore  Makefile  README.md
12_StoneFall-On-chain/: .gitignore  Makefile  README.md
13_Down-Man-On-chain/: .env.example  .gitignore  Makefile  README.md
14_BraveMan-On-chain/: .env.example  .gitignore  Makefile  README.md
14_BraveMan-On-chain/backend/: .env.example  Cargo.toml
14_BraveMan-On-chain/backend/braveman-api/: Cargo.toml
14_BraveMan-On-chain/backend/braveman-api/src/: main.rs
14_BraveMan-On-chain/backend/braveman-core/: Cargo.toml
14_BraveMan-On-chain/backend/braveman-core/src/: lib.rs
14_BraveMan-On-chain/backend/xtask/: Cargo.toml
14_BraveMan-On-chain/backend/xtask/src/: main.rs
15_TicTacToe-On-chain/: .gitignore  Makefile  README.md
16_UniversityCutoffProof-zk/: .env.example  .gitignore  Makefile  README.md
17_AlcoholAgeGate-zk/: .env.example  .gitignore  Makefile  README.md
18_UnemploymentBenefitProof-zk/: .env.example  .gitignore  Makefile  README.md
19_CreatorRevenueCenter-On-chain/: .env.example  .gitignore  Makefile  README.md
20_AngryBirds-On-chain/: .env.example  .gitignore  Makefile  OPTIMIZATION_ROADMAP.md  README.md  TITLE_SCREEN_BACKGROUND_PROMPT.md
20_AngryBirds-On-chain/backend/: Cargo.toml
20_AngryBirds-On-chain/backend/angrybirds-api/: Cargo.toml
20_AngryBirds-On-chain/backend/angrybirds-api/src/: app_state.rs  chain_client.rs  config.rs  errors.rs  idempotency.rs  indexer.rs  lib.rs  main.rs  models.rs  relay.rs  router.rs  test_support.rs
20_AngryBirds-On-chain/backend/angrybirds-api/src/db/: batches.rs  idempotency.rs  indexer.rs  mod.rs  runs.rs  schema.rs  sessions.rs
20_AngryBirds-On-chain/backend/angrybirds-api/src/handlers/: mod.rs  read_model.rs  runs.rs  sessions.rs
20_AngryBirds-On-chain/backend/angrybirds-core/: Cargo.toml
20_AngryBirds-On-chain/backend/angrybirds-core/src/: lib.rs  protocol.rs
(+1550 files in other folders)
