[workspace]
members = ["braveman-core", "braveman-api", "xtask"]
resolver = "2"

[workspace.package]
edition = "2021"
version = "0.1.0"
license = "MIT"
authors = ["lllu_23"]
repository = "https://github.com/Luboy23/foundry-advanced-14-brave-man-on-chain"
homepage = "https://github.com/Luboy23/foundry-advanced-14-brave-man-on-chain"

[workspace.dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha3 = "0.10"
hex = "0.4"
