[package]
name = "braveman-core"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true

[lib]
crate-type = ["rlib"]

[dependencies]
serde.workspace = true
serde_json.workspace = true
sha3.workspace = true
hex.workspace = true
